--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body ng-controller="mainCtrl">
     <header>
-        <h1><a href="#x/home" style="color:inherit">ここを変更</a></h1>
+        <h1><a href="#x/home" style="color:inherit">Your site name</a></h1>
         <nav>
             <ul id="menu">
                 <li ng-repeat="i in menu" style="width:{{100/menu.length}}%"><a href="#x/{{i.u}}">{{i.t}}</a></li>
